<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_today_white_24dp"
        android:orderInCategory="1"
        android:title="@string/events"
        app:showAsAction="always" />

    <item
        android:id="@+id/people"
        android:icon="@drawable/ic_person_white_24dp"
        android:orderInCategory="1"
        android:title="@string/people"
        app:showAsAction="always" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_bubble_white_24dp"
        android:orderInCategory="1"
        android:title="@string/people"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu"
        app:showAsAction="always" />

</menu>